// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select matches snapshot: enzyme.mount 1`] = `
<Select
  errorText={null}
  hintText={null}
  label="example"
>
  <glamorous(label)
    errorText={null}
  >
    <label
      className="css-16y5nda"
    >
      <glamorous(span)
        errorText={null}
      >
        <span
          className="css-1m1nyko"
        >
          example
        </span>
      </glamorous(span)>
      <span />
      <span />
      <glamorous(select)
        errorText={null}
      >
        <select
          className="css-8psxza"
        >
          example
        </select>
      </glamorous(select)>
    </label>
  </glamorous(label)>
</Select>
`;

exports[`Select matches snapshot: enzyme.render 1`] = `
<label
  class="css-16y5nda"
>
  <span
    class="css-1m1nyko"
  >
    example
  </span>
  <span />
  <span />
  <select
    class="css-8psxza"
  >
    example
  </select>
</label>
`;

exports[`Select matches snapshot: enzyme.shallow 1`] = `
<glamorous(label)
  errorText={null}
>
  <glamorous(span)
    errorText={null}
  >
    example
  </glamorous(span)>
  <span />
  <span />
  <glamorous(select)
    errorText={null}
  >
    example
  </glamorous(select)>
</glamorous(label)>
`;
